fix-head-align-color

--- a/css/main-styles.css
+++ b/css/main-styles.css
@@ -8551,11 +8551,14 @@ a.theme-btn-on-bg:hover, a.theme-btn-on-bg:focus, a.theme-btn-on-bg:active, .the
   font-size: 2.25rem;
   letter-spacing: 0.175rem;
   font-weight: 900;
-  color: #355E3B
+  color: #355E3B;
+  align-items: center;
 }
 
-.resume-header .title {
+.resume-header .myTitle {
   font-size: 1.5rem;
+  color: rgb(9, 121, 105,0.6);
+  align-items: center;
 }
 
 .resume-header a {
